# Draft-Bot

./: CMakeLists.txt  README.md
cmake/: FindDpp.cmake  FindGit.cmake  MakeFolders.cmake
src/: CMakeLists.txt
src/BotsServer/: CMakeLists.txt
src/CppStdDiscordBot/: CMakeLists.txt
src/CppStdTelegramBot/: Application.cpp  BaseCommandTGBot.cc  BaseCommandTGBot.h  CMakeLists.txt  CoreTelegramBot.cc  CoreTelegramBot.h  Dockerfile
